--- a/examples/bootcamp/index.html
+++ b/examples/bootcamp/index.html
@@ -7,7 +7,7 @@
 	<script src="../../lib/CocoonJSExtensions/CocoonJS_Store.js"></script>
 
 	<script src="../../lib/kiwi.js"></script>
-	<script src="../../src/cocoonInAppPurchase-1.0.0.js"></script>
+	<script src="../../src/inAppPurchase-1.0.0.js"></script>
 	<script src="../../lib/plugins/bitmapText-1.1.js"></script>
 	<script src="../../lib/plugins/saveManager-1.0.1.js"></script>
 	<script src="classes.js"></script>
