--- a/examples/intro/index.html
+++ b/examples/intro/index.html
@@ -7,7 +7,7 @@
 	<script src="../../lib/CocoonJSExtensions/CocoonJS_Store.js"></script>
 
 	<script src="../../lib/kiwi.js"></script>
-	<script src="../../src/cocoonInAppPurchase-1.0.0.js"></script>
+	<script src="../../src/inAppPurchase-1.0.0.js"></script>
 </head>
 <body>
 	
