Updated versions listed. Examples now use correct cocoon version and no longer make deprecated API calls.

--- a/examples/bootcamp/index.html
+++ b/examples/bootcamp/index.html
@@ -1,10 +1,6 @@
 <html>
 <head>
-	<script src="../../lib/CocoonJSExtensions/CocoonJS.js"></script>
-	<script src="../../lib/CocoonJSExtensions/CocoonJS_Ad.js"></script>
-	<script src="../../lib/CocoonJSExtensions/CocoonJS_App.js"></script>
-	<script src="../../lib/CocoonJSExtensions/CocoonJS_App_ForCocoonJS.js"></script>
-	<script src="../../lib/CocoonJSExtensions/CocoonJS_Store.js"></script>
+	<script src="../../lib/cocoon.js"></script>
 
 	<script src="../../lib/kiwi.js"></script>
 	<script src="../../src/inAppPurchase-1.0.0.js"></script>
