--- a/examples/intro/index.html
+++ b/examples/intro/index.html
@@ -1,10 +1,6 @@
 <html>
 <head>
-	<script src="../../lib/CocoonJSExtensions/CocoonJS.js"></script>
-	<script src="../../lib/CocoonJSExtensions/CocoonJS_Ad.js"></script>
-	<script src="../../lib/CocoonJSExtensions/CocoonJS_App.js"></script>
-	<script src="../../lib/CocoonJSExtensions/CocoonJS_App_ForCocoonJS.js"></script>
-	<script src="../../lib/CocoonJSExtensions/CocoonJS_Store.js"></script>
+	<script src="../../lib/cocoon.js"></script>
 
 	<script src="../../lib/kiwi.js"></script>
 	<script src="../../src/inAppPurchase-1.0.0.js"></script>
