--- a/examples/bootcamp/index.html
+++ b/examples/bootcamp/index.html
@@ -3,7 +3,7 @@
 	<script src="../../lib/cocoon.js"></script>
 
 	<script src="../../lib/kiwi.js"></script>
-	<script src="../../src/inAppPurchase-1.0.0.js"></script>
+	<script src="../../src/in-app-purchase-1.0.0.js"></script>
 	<script src="../../lib/plugins/bitmapText-1.1.js"></script>
 	<script src="../../lib/plugins/saveManager-1.0.1.js"></script>
 	<script src="classes.js"></script>
