Updated IAP version and examples.

--- a/examples/sierra/index.html
+++ b/examples/sierra/index.html
@@ -1,13 +1,17 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<script src="../../lib/cocoon.js"></script>
-
-	<script src="../../lib/kiwi.js"></script>
-	<script src="../../src/in-app-purchase-1.1.0.js"></script>
-	<script src="../../lib/plugins/bitmapText-1.1.js"></script>
+	<meta charset="utf-8" />
+	<title>Intro</title>
 </head>
 <body>
 	
+<script src="cordova.js"></script>
+
+<script src="../../lib/kiwi.js"></script>
+<script src="../../src/in-app-purchase-2.0.0.js"></script>
+<script src="../../lib/plugins/bitmapText-1.1.js"></script>
+
 <script src="main.js"></script>
 
 </body>
