--- a/examples/bootcamp/index.html
+++ b/examples/bootcamp/index.html
@@ -1,16 +1,19 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<script src="../../lib/cocoon.js"></script>
+	<meta charset="utf-8" />
+	<title>Bootcamp</title>
+</head>
+<body>
+	<script src="cordova.js"></script>
 
 	<script src="../../lib/kiwi.js"></script>
-	<script src="../../src/in-app-purchase-1.1.0.js"></script>
+	<script src="../../src/in-app-purchase-2.0.0.js"></script>
 	<script src="../../lib/plugins/bitmapText-1.1.js"></script>
 	<script src="../../lib/plugins/saveManager-1.0.1.js"></script>
 	<script src="classes.js"></script>
-</head>
-<body>
 	
-<script src="main.js"></script>
+	<script src="main.js"></script>
 
 </body>
 </html>
